<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myfirstapp.billys.myfirstapp.LoginPage">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_alignParentStart="true"
        android:textColor="#800000"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/txtPasswort"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextUser"
        android:textColor="#800000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/textUser"
        android:textColor="#ffff00"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textPasswort"
        android:id="@+id/txtPasswort"
        android:layout_below="@+id/editTextUser"
        android:layout_alignEnd="@+id/txtUser"
        android:layout_marginTop="38dp"
        android:textSize="15sp"
        android:textColor="#ffff00" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonLogin"
        android:id="@+id/btnLogin"
        android:layout_marginTop="50dp"
        android:textColor="#ffff00"
        android:background="#800000"
        android:layout_below="@+id/editTextPass"
        android:layout_toEndOf="@+id/txtPasswort" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/btnRegister"
        android:background="#800000"
        android:textColor="#FFFF00"
        android:layout_marginStart="40dp"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_toEndOf="@+id/btnLogin" />

</RelativeLayout>
